--- a/azure-pipeline-push-image-acr.yml
+++ b/azure-pipeline-push-image-acr.yml
@@ -5,10 +5,9 @@ trigger:
 
 variables:
   # Variables de entorno
-  ACR_NAME: 'registroContenedorExp2S4' # Colocar el nombre de tu ACR
-  IMAGE_NAME: 'myapp-nginx-s4' # Colocar el Nombre de Imagen
-  SERVICE_CONNECTION_NAME: 'exp2-s4-docker-connection' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
-
+  ACR_NAME: 'devopss4'
+  IMAGE_NAME: 'myapp-nginx-s4'
+  SERVICE_CONNECTION_NAME: 'exp2-s4-docker-connection' 
 jobs:
   - job: BuildAndPush
     pool:
