--- a/azure-pipeline-push-image-acr.yml
+++ b/azure-pipeline-push-image-acr.yml
@@ -5,9 +5,9 @@ trigger:
 
 variables:
   # Variables de entorno
-  ACR_NAME: 'registroContenedorExp2S4' # Colocar el nombre de tu ACR
+  ACR_NAME: 'appdevopss4' # Colocar el nombre de tu ACR
   IMAGE_NAME: 'myapp-nginx-s4' # Colocar el Nombre de Imagen
-  SERVICE_CONNECTION_NAME: 'exp2-s4-docker-connection' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
+  SERVICE_CONNECTION_NAME: 'taller-devops' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
 
 jobs:
   - job: BuildAndPush
