--- a/azure-pipeline-push-image-acr.yml
+++ b/azure-pipeline-push-image-acr.yml
@@ -7,7 +7,7 @@ variables:
   # Variables de entorno
   ACR_NAME: 'appdevopss4' # Colocar el nombre de tu ACR
   IMAGE_NAME: 'myapp-nginx-s4' # Colocar el Nombre de Imagen
-  SERVICE_CONNECTION_NAME: 'taller-devops' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
+  SERVICE_CONNECTION_NAME: 'taller-devops'
 
 jobs:
   - job: BuildAndPush
